adding and completing actions