@@ -1,11 +1,11 @@
 package com.mygdx.game.model.game;
 
 import com.mygdx.game.model.game.card.AbstractCard;
+import com.mygdx.game.model.game.card.PlayableCard;
 import com.mygdx.game.model.network.massage.clientRequest.postSignInRequest.CardSelectionAnswer;
 import com.mygdx.game.model.network.massage.serverResponse.ServerResponse;
 import com.mygdx.game.model.network.massage.serverResponse.gameResponse.ActionResponse;
 import com.mygdx.game.model.network.massage.serverResponse.gameResponse.ActionResponseType;
-import com.mygdx.game.model.network.massage.serverResponse.gameResponse.InvalidRequestException;
 import com.mygdx.game.model.network.massage.serverResponse.gameResponse.PlayCardResponse;
 import com.mygdx.game.model.user.Player;
 
@@ -14,11 +14,17 @@ import java.util.List;
 import java.util.function.BiFunction;
 
 public enum CardSelectHandler {
+    MEDIC((cardSelectionAnswer, player) -> {
+        List<AbstractCard> abstractCards = cardSelectionAnswer.getSelection();
+        //if(abstractCards.size() != 1) return new ServerResponse(new InvalidRequestException());
+
+        return ((PlayableCard)abstractCards.getFirst()).revive();
+    }),
     ERIDIN_DESTROYER_ADD((cardSelectionAnswer, player) -> {
         List<AbstractCard> abstractCards = cardSelectionAnswer.getSelection();
         //if(abstractCards.size() != 1) return new ServerResponse(new InvalidRequestException());
 
-        player.getDeck().add(abstractCards.get(0));
+        player.getDeckAsCards().add(abstractCards.getFirst());
         player.getGame().switchTurn();
         return new PlayCardResponse(player.getGame(), null);
     }),
@@ -31,7 +37,7 @@ public enum CardSelectHandler {
         }
 
         player.getGame().setCardSelectHandler(ERIDIN_DESTROYER_ADD);
-        return new PlayCardResponse(player.getGame(), new ActionResponse(ActionResponseType.SELECTION, player.getDeck(), 1));
+        return new PlayCardResponse(player.getGame(), new ActionResponse(ActionResponseType.SELECTION, player.getDeckAsCards(), 1));
     })),
     ERIDIN_KING((answer,player) -> {
         List<AbstractCard> abstractCards = answer.getSelection();
@@ -50,10 +56,12 @@ public enum CardSelectHandler {
         player.getGame().switchTurn();
         return abstractCard.place(abstractCard.getRow(), player);
     });
-    private BiFunction<CardSelectionAnswer, Player, ServerResponse> handler;
+    private final BiFunction<CardSelectionAnswer, Player, ServerResponse> handler;
 
     CardSelectHandler(BiFunction<CardSelectionAnswer,Player ,ServerResponse> handler) {
         this.handler = handler;
     }
-
+    public ServerResponse handle(CardSelectionAnswer a, Player p) {
+        return handler.apply(a, p);
+    }
 }
